# so_os

./: Cargo.toml  README.md  x86_64-so_os.json
.cargo/: config.toml
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  os_start.rs  pcb.rs  shell.rs  vga_buffer.rs
src/process/: mod.rs  pcb.rs  schedule.rs
src/registers/: general_register.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
